--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -8,7 +8,7 @@
 .gpt3__navbar-links {
     flex: 1;
     display: flex;
-    justify-content: flex-start;
+    justify-content: inherit;
     align-items: center;
 }
 
