--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -12,7 +12,7 @@
 }
 
 .gpt3__header-content h1 {
-    font-family: var(--font-family);
+    font-family: var(--font-family), sans-serif;
     font-weight: 800;
     font-size: 62px;
     line-height: 75px;
@@ -63,7 +63,8 @@
     font-size: 18px;
     line-height: 25px;
     background: #FF4820;
-    border-radius: 5px 0px 0px 5px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
     color: #fff;
     cursor: pointer;
     outline: none;
@@ -92,4 +93,68 @@
     line-height: 38px;
     color: #fff;
     text-align: center;
+ }
+
+ .gpt3__header-image {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+ }
+
+ .gpt3__header-image img {
+    width: 100%;
+    height: 100%;
+ }
+
+ @media screen and (max-width: 1050px) {
+    .gpt3__header {
+        flex-direction: column;
+    }
+
+    .gpt3__header-content {
+        margin: 0 0 3rem;
+    }
+ }
+
+ @media screen and (max-width: 650px) {
+    .gpt3__header h1 {
+        font-size: 48px;
+        line-height: 60px;
+    }
+
+    .gpt3__header p {
+        font-size: 16px;
+        line-height: 24px;
+    }
+
+    .gpt3__header-content__people {
+        flex-direction: column;
+    }
+
+    .gpt3__header-content__people p {
+        margin: 0;
+    }
+
+    .gpt3__header-content__input input, .gpt3__header-content__input button {
+        font-size: 16px;
+        line-height: 24px;
+    }
+ }
+
+ @media screen and (max-width: 490px) {
+    .gpt3__header h1 {
+        font-size: 36px;
+        line-height: 48px;
+    }
+
+    .gpt3__header p {
+        font-size: 14px;
+        line-height: 24px;
+    }
+
+    .gpt3__header-content__input input, .gpt3__header-content__input button {
+        font-size: 12px;
+        line-height: 16px;
+    }
  }
