--- a/src/containers/about/about.css
+++ b/src/containers/about/about.css
@@ -1,3 +1,7 @@
+.section__margin {
+    margin: 4rem 6rem;
+}
+
 .gpt3__about {
 
     /* ff 3.6+ */
@@ -47,4 +51,58 @@
     font-weight: 800;
     max-width: 510px;
     font-family: var(--font-family);
+}
+
+.gpt3__about-heading p {
+    font-size: 16px;
+    line-height: 30px;
+    font-weight: 500;
+    max-width: 510px;
+    font-family: var(--font-family);
+    color: var(--color-subtext);
+    cursor: pointer;
+}
+
+.gpt3__about-container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    margin-top: 2rem;
+}
+
+@media screen and (max-width: 850px) {
+    .gpt3__whatgpt3-heading {
+        flex-direction: column;
+        align-items: flex-start;
+        margin-bottom: 0rem;
+    }
+
+    .gpt3__whatgpt3-heading p {
+        margin-top: 1rem;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    /* Customizing feature component as per needs */
+    .gpt3__whatgpt3-feature .gpt3__features-container__feature {
+        flex-direction: column;
+    }
+
+    /* Customizing feature component as per needs */
+    .gpt3__whatgpt3-feature .gpt3__features-container_feature-text {
+        margin-top: 0.5rem;
+    }
+
+    .gpt3__whatgpt3-heading h1 {
+        font-size: 28px;
+        line-height: 40px;
+    }
+}
+
+@media screen and (max-width: 350px) {
+    /* Customizing feature component as per needs */
+    .gpt3__whatgpt3-container .gpt3__features-container__feature {
+        margin: 1rem 0;
+        min-width: 100%;
+    }
 }
