--- a/src/components/feature/feature.css
+++ b/src/components/feature/feature.css
@@ -1,4 +1,4 @@
-.gpt3__features-container__feature {
+.gpt3__feature-container__feature {
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -7,38 +7,36 @@
     margin: 1rem;
 }
 
-.gpt3__features-container__feature-title {
+.gpt3__feature-container__feature-title {
     flex: 1;
     max-width: 180px;
     margin-right: 2rem;
 }
 
-.gpt3__features-container__feature-title h3 {
+div.gradient__bar-feature {
+    width: 38px;
+    height: 3px;
+    background: var(--gradient-bar);
+    box-shadow: 0 4px 4px rgba(0,0,0,.5);
+    margin-bottom: 0.25rem;
+}
+
+.gpt3__feature-container__feature-title h3 {
     font-family: var(--font-family);
-    font-weight: 500;
+    font-weight: 800;
     font-size: 18px;
     line-height: 24px;
     letter-spacing: -0.04em;
     color: #fff;
 }
 
-.gpt3__features-container__feature-title div {
-    width: 38px;
-    height: 3px;
-    left: 192px;
-    top: 1488px;
-    background: var(--gradient-bar);
-    box-shadow: 0 4px 4px rgba(0,0,0,.5);
-    margin-bottom: 0.25rem;
-}
-
-.gpt3__features-container__feature-text {
+.gpt3__feature-container__feature-text {
     flex: 2;
-    max-width: 390px;
+    max-width: 700px;
     display: flex;
 }
 
-.gpt3__features-container__feature-text p {
+.gpt3__feature-container__feature-text p {
     font-family: var(--font-family);
     font-weight: 500;
     font-size: 14px;
@@ -47,15 +45,15 @@
 }
 
 @media screen and (max-width: 550px) {
-    .gpt3__features-container__feature-title h3 {
+    .gpt3__feature-container__feature-title h3 {
         font-size: 14px;
         line-height: 22px;
     }
-    .gpt3__features-container__feature-title p {
+    .gpt3__feature-container__feature-title p {
         font-size: 12px;
         line-height: 20px;
     }
-    .gpt3__features-container__feature {
+    .gpt3__feature-container__feature {
         margin: 1rem 0;
     }
 }
