--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -77,6 +77,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    flex-direction: row;
     margin-top: 2rem;
 }
 
@@ -86,13 +87,14 @@
 }
 
 .gpt3__header-content__people p {
-    margin-left: 0 0 0 1rem;
+    margin: 0 0 0 1rem;
     font-family: var(--font-family);
     font-weight: 500;
     font-size: 12px;
     line-height: 38px;
     color: #fff;
     text-align: center;
+    margin-top: 0;
  }
 
  .gpt3__header-image {
@@ -104,7 +106,7 @@
 
  .gpt3__header-image img {
     width: 100%;
-    height: 100%;
+    height: auto;
  }
 
  @media screen and (max-width: 1050px) {
